Upgrade Hadoop to 3.5.0 [CTT-1219] (#7190)
GitOrigin-RevId: e6d7346b602a11b007c89c2beea93395aad07ac8